# metalclaw

./: .gitignore  .gitleaks.toml  CLAUDE.md  Dockerfile  Taskfile.yml  bot.py  changes.jsonl  channels.py  chat_loop.py  commands.py  compose.yaml  config.example.yaml  config.py  heartbeat.example.md  heartbeat.py  history.py  live_tool.py  memory.py  pyproject.toml  registry.py  self_change.py  telegram_bot.py  telegram_format.py  tools.py  vault_search.py
ai-docs/: INDEX.md  architecture.md  chat-loop.md  config.md  conventions.md  dataflow.md  fastmail-caldav-plan.md  fastmail-jmap.md  frontends.md  gotchas.md  heartbeat-plan.md  heartbeat.md  memory.md  modules.md  providers.md  testing.md  tools-package-split-plan.md  tools.md
assets/: manual_template.md
frontends/: cli.py  common.py  discord.py  telegram.py
providers/: __init__.py  anthropic_provider.py  base.py  litellm_provider.py  ollama.py  openai_provider.py
tests/: conftest.py  test_config.py  test_discord.py  test_escalation.py  test_frontends_common.py  test_heartbeat.py  test_litellm_provider.py  test_live_tool.py  test_manual.py  test_memory.py  test_ollama_provider.py  test_providers.py  test_registry_schema.py  test_routing.py  test_self_change.py  test_telegram_format.py  test_tools_registration.py  test_vault_search.py
tools/: __init__.py  _http.py  dice.py  escalation.py  heartbeat_tools.py  mail.py  manual.py  memory_tools.py  search.py  trains.py  weather.py
