[project]
name = "metalclaw"
version = "0.1.0"
description = "Add your description here"
requires-python = ">=3.14"
dependencies = [
    "beautifulsoup4>=4.12",
    "httpx>=0.28.1",
    "markdown-it-py>=3.0",
    "markdownify>=0.13",
    "prompt_toolkit>=3.0",
    "python-telegram-bot>=21.0",
    "pyyaml>=6.0",
    "rich>=13.0",
]

[dependency-groups]
dev = ["ruff", "pytest"]
